feat: add all likes by user id and refac errors status
